--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
+    "react-flags-select": "^1.1.10",
     "react-scripts": "3.1.1"
   },
   "scripts": {
