--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
     "react-flags-select": "^1.1.10",
-    "react-scripts": "3.1.1"
+    "react-scripts": "3.1.1",
+    "underscore": "^1.9.1"
   },
   "scripts": {
     "start": "react-scripts start",
